# chmura_obliczeniowa_zad2

./: .clang-format  .clang-tidy  .env.example  .gitignore  CHECKLIST.md  CMakeLists.txt  COMMANDS.md  COMPLETION_STATUS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  Dockerfile  QUICK_START.md  README-CICD.md  README.md  main.cpp  monitor-pipeline.ps1  validate-setup.ps1
.github/workflows/: build-and-publish.yml  docker-pipeline.yml
